--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,6 @@ jobs:
     - name: Test with pytest
       run: |
         python3 gitaction_test.py
+    - name: checkout
+      run: |
+        ls -al
