--- a/.github/workflows/python-app2.yml
+++ b/.github/workflows/python-app2.yml
@@ -30,5 +30,8 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run python
+      env:
+        AWS_S3_BUCKET: ${{ secrets.GIT_TEST }}
+        
       run: |
         python3 gitaction_test.py
