--- a/.github/workflows/python-app2.yml
+++ b/.github/workflows/python-app2.yml
@@ -29,9 +29,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: run python
+    - name: Print Secret
       env:
-        AWS_S3_BUCKET: ${{ secrets.GIT_TEST }}
-        
+        GIT_TEST: ${{ secrets.GIT_TEST }}
       run: |
-        python3 gitaction_test.py
+        echo "GIT_TEST secret value: $GIT_TEST"
